@@ -16,10 +16,7 @@ import infrastructure.ProductRepositoryImpl;
 import sharedrmi.application.exceptions.AlbumNotFoundException;
 import sharedrmi.application.exceptions.NotEnoughStockException;
 import sharedrmi.domain.enums.MediumType;
-import sharedrmi.domain.valueobjects.AlbumId;
 
-import java.rmi.RemoteException;
-import java.rmi.server.UnicastRemoteObject;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -192,7 +189,18 @@ public class ProductServiceImpl implements ProductService {
                                 .releaseDate(song.getReleaseDate().toString())
                                 .genre(song.getGenre())
                                 .stock(song.getStock())
-                                .inAlbum(Collections.emptySet())
+                                .inAlbum(Set.of(new AlbumDTO(
+                                        album.getTitle(),
+                                        album.getImageUrl(),
+                                        album.getPrice(),
+                                        album.getStock(),
+                                        album.getMediumType(),
+                                        album.getReleaseDate().toString(),
+                                        album.getAlbumId(),
+                                        album.getLabel(),
+                                        Collections.emptySet(),
+                                        0
+                                )))
                                 .build()
                         )
                         .collect(Collectors.toSet())
@@ -207,6 +215,7 @@ public class ProductServiceImpl implements ProductService {
         Optional<Album> albumOpt = productRepository.findAlbumByAlbumId(albumId);
         if(albumOpt.isPresent()) {
             Album album = albumOpt.get();
+
             return AlbumDTO.builder()
                     .title(album.getTitle())
                     .imageUrl(album.getImageUrl())
@@ -230,7 +239,18 @@ public class ProductServiceImpl implements ProductService {
                                     .releaseDate(song.getReleaseDate().toString())
                                     .genre(song.getGenre())
                                     .stock(song.getStock())
-                                    .inAlbum(Collections.emptySet())
+                                    .inAlbum(Set.of(new AlbumDTO(
+                                            album.getTitle(),
+                                            album.getImageUrl(),
+                                            album.getPrice(),
+                                            album.getStock(),
+                                            album.getMediumType(),
+                                            album.getReleaseDate().toString(),
+                                            album.getAlbumId(),
+                                            album.getLabel(),
+                                            Collections.emptySet(),
+                                            0
+                                    )))
                                     .build()
                             )
                             .collect(Collectors.toSet())
